src/Client/PainKiller.DockubeClient/Templates/Mailpit/Mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit:latest
          ports:
            - containerPort: 1025 # SMTP
            - containerPort: 8025 # Web UI
          args:
            - "--smtp"
            - "0.0.0.0:1025"
            - "--listen"
            - "0.0.0.0:8025"

---

apiVersion: v1
kind: Service
metadata:
  name: mailpit  
spec:
  selector:
    app: mailpit
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: http
      port: 8025
      targetPort: 8025

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit  
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mail.$$DOMAIN_NAME$$
      secretName: mail-tls
  rules:
    - host: mail.$$DOMAIN_NAME$$
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  number: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit-lb
  labels:
    app: mailpit
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.153
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: http
      port: 8025
      targetPort: 8025
  selector:
    app: mailpit
